--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -4,6 +4,11 @@
       <span class="app-page-title">{{"settings_title" | translate}}</span>
       <span class="app-user" *ngIf="ud.getTechName()">{{ud.getTechName()}}</span>
     </ion-title>
+    <ion-buttons right>
+      <button class="settings-advanced-button" ion-button icon-only (press)="showAdvanced()">
+        <ion-icon class="settings-advanced-icon" name="ios-settings-outline"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
@@ -33,9 +38,18 @@
         <ion-label>{{'sounds' | translate}}</ion-label>
         <ion-toggle [(ngModel)]="sounds" (ngModelChange)="toggleSounds()"></ion-toggle>
       </ion-item>
+    </ion-item-group>
+    <ion-item-group *ngIf="advanced">
+      <ion-item-divider color="light">{{'user_settings' | translate}}</ion-item-divider>
       <ion-item>
         <ion-label>{{'stay_in_reports' | translate}}</ion-label>
         <ion-toggle [(ngModel)]="stayInReports" (ngModelChange)="toggleStayInReports()"></ion-toggle>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'weeks_to_show' | translate}}</ion-label>
+        <ion-select [(ngModel)]="weeksToShow" (ionChange)="updateWeeksToShow(weeksToShow)">
+          <ion-option *ngFor="let weeksToShow of weeksToShowList" [value]="weeksToShow">{{weeksToShow}}</ion-option>
+        </ion-select>
       </ion-item>
     </ion-item-group>
     <ion-item-group>
