--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,81 +36,55 @@
     </ion-card-header>
     <ion-list no-lines no-border class="home-card-body-list" *ngIf="period">
       <ion-item class="ion-item-button-like" *ngFor="let shift of period.shifts; let i=index" (tap)="showShiftReports(shift)">
-        <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
-        <span class="fake-wrapper" *ngIf="shift.getShiftLength() === 'off'">
-          <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
-            <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-              {{'off' | translate}} &nbsp;&nbsp;
+        <span class="fake-row">
+          <span class="fake-column fake-col-01">
+            <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
+          </span>
+          <span class="fake-column fake-col-02">
+            <span class="fake-wrapper" *ngIf="shift.getShiftLength() === 'off'">
+              <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
+                <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                  {{'off' | translate}}
+                </span>
+                <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getShiftReportsStatus().code}} / {{shift.getShiftReportsStatus().code}}
+                </span>
+              </span>
+              <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
+                <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getNormalHours()}} / {{'off' | translate}}  Hrs.
+                </span>
+                <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getShiftReportsStatus().code}} + {{shift.getNormalHours()}}
+                </span>
+              </span>
             </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-              {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp;&nbsp;
+            <span class="fake-wrapper" *ngIf="shift.getShiftLength() !== 'off'">
+              <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
+                <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                  0 / {{shift.getShiftLength()}} Hrs.
+                </span>
+                <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getShiftReportsStatus().code}} / {{shift.getShiftReportsStatus().code}} Hrs.
+                </span>
+              </span>
+              <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
+                <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getNormalHours()}} / {{shift.getShiftLength()}} Hrs.
+                </span>
+                <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
+                  {{shift.getShiftReportsStatus().code}} + {{shift.getNormalHours()}}  Hrs
+                </span>
+              </span>
             </span>
           </span>
-          <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-            <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-              {{shift.getNormalHours()}}&nbsp;/&nbsp;{{'off' | translate}} &nbsp; Hrs. &nbsp;&nbsp;
-            </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-              {{shift.getShiftReportsStatus().code}} &nbsp;+&nbsp; {{shift.getNormalHours()}} &nbsp;&nbsp;
-            </span>
+          <span class="fake-column fake-col-03">
+            <span class="normal-txt">{{shift.getStartTime().format("ddd, MMM D")}}</span>
           </span>
-        </span>
-        <span class="fake-wrapper" *ngIf="shift.getShiftLength() !== 'off'">
-          <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
-            <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-              0&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp; Hrs. &nbsp;&nbsp;
-            </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-              {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp; Hrs. &nbsp;&nbsp;
-            </span>
-          </span>
-          <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-            <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-              {{shift.getNormalHours()}}&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp; Hrs. &nbsp;&nbsp;
-            </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-              <!-- {{shift.getShiftReportStatus().otherReportHours}}&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp; Hrs. &nbsp;&nbsp; -->
-              {{shift.getShiftReportsStatus().code}} &nbsp;+&nbsp; {{shift.getNormalHours()}} &nbsp; Hrs &nbsp;&nbsp;
-            </span>
-          </span>
-        </span>
-          <!-- <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otheReportHours">
-              {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp;&nbsp;
-            </span>
-          </span>
-          <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-            <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otheReportHours">
-              {{'off' | translate}} &nbsp;&nbsp;
-            </span>
-          <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otheReportHours">
-              {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp;&nbsp;
-            </span>
+          <span class="fake-column fake-col-04">
+            <ion-icon item-end class="chk-box-icon" [ngClass]="shift.getShiftStatus()" [innerHTML]="getCheckboxSVG(shift) | safe: 'html'" (tap)="possibleSound(shift)"></ion-icon>
           </span>
         </span>
-          <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().workHours && shift.getShiftReport">
-              {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp;&nbsp;
-            </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().status && shift.getShiftReportsStatus().workHours">
-              {{shift.getShiftReportsStatus().code}}&nbsp;+&nbsp;{{shift.getShiftReportsStatus().workHours}} &nbsp;Hrs. &nbsp;&nbsp;
-            </span>
-            <span class="shift-text" *ngIf="shift.getShiftReportsStatus().status &&">
-              {{shift.getNormalHours()}}&nbsp;/&nbsp;{{'off' | translate}} &nbsp;Hrs. &nbsp;&nbsp;
-            </span>
-          </span>
-        </span>
-        <span class="fake-wrapper" *ngIf="shift.getShiftLength() !== 'off'">
-          <span class="shift-text" *ngIf="shift.getShiftReportsStatus().status && !shift.getShiftReportsStatus().workHours">
-            {{shift.getShiftReportsStatus().code}}&nbsp;/&nbsp;{{shift.getShiftReportsStatus().code}} &nbsp;&nbsp;
-          </span>
-          <span class="shift-text" *ngIf="shift.getShiftReportsStatus().status && shift.getShiftReportsStatus().workHours">
-            {{shift.getShiftReportsStatus().code}}&nbsp;+&nbsp;{{shift.getShiftReportsStatus().workHours}} &nbsp;Hrs. &nbsp;&nbsp;
-          </span>
-          <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().status">
-            {{shift.getNormalHours()}}&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp;Hrs. &nbsp;&nbsp;
-          </span>
-        </span> -->
-        <span class="normal-txt">{{shift.getStartTime().format("ddd, MMM D")}}</span>
-        <ion-icon item-end class="chk-box-icon" [ngClass]="shift.getShiftStatus()" [innerHTML]="getCheckboxSVG(shift) | safe: 'html'" (tap)="possibleSound(shift)"></ion-icon>
       </ion-item>
       <ion-list-header class="blank-list-header" ></ion-list-header>
       <ion-list-header class="home-hours-submitted">
